--- a/TopicosAvanzados19A/public_html/JonathanEuan/Programa06.html
+++ b/TopicosAvanzados19A/public_html/JonathanEuan/Programa06.html
@@ -373,7 +373,7 @@ $(document).ready(function(){
 						</div>
 						<div class="form-group">
 							<label>Precio</label>
-							<input type="email" class="form-control" required>
+							<input class="form-control" required>
 						</div>
 						<div class="form-group">
 							<label>Bebidas</label>
