--- a/TopicosAvanzados19A/public_html/JonathanEuan/MiPagina.html
+++ b/TopicosAvanzados19A/public_html/JonathanEuan/MiPagina.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html>
+<!-- Programa 01 
+creacion de un html como introduccion a la primera unidad
+de Topicos avanzados de programacion-->
 <html>
 <head>
   <title>PagJS</title>
