--- a/TopicosAvanzados19A/public_html/JonathanEuan/Programa03.html
+++ b/TopicosAvanzados19A/public_html/JonathanEuan/Programa03.html
@@ -5,7 +5,7 @@ Interfaces y Formularios
     <head>
         <link href="bootstrap-4.1.3/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
         <script src="bootstrap-4.1.3/dist/js/bootstrap.min.js" type="text/javascript"></script>
-
+    <!-- linea de codigo que nos sirver para jalar las librerias de bootstrap y css-->
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,10 +20,13 @@ Interfaces y Formularios
           <!--formulario-->
           <form class="form-signin">
               <div class="form-group">-
-                  <label class="control-label col-sm-2" for="inputUsername">User:</label>
+                  <label class="control-label col-sm-2" for="inputUsername">Usuario:</label>
               <div class="col-sm-10">
                   <input class="form-control" name="inputUsername" id="inputUsername" type="text" placeholder="Ejemplo: Mickey" />
+                <!-- en esta parte creamos un label y una caja de texto, para que el usuario ingrese su nombre,
+                como extra se agrego un placeholder, que sirve como un ejemplo de lo que se puede ingresar en esa campo-->
               </div>
+  <!-- aqui creamos una lista "cosas", haciendo que el usuario pueda marcarlas para seleccioner lo que desee-->            
             <input name="inputRadio1" id="inputRadio1" type="radio" value="1">Chocolates <br>
             <input name="inputRadio2" id="inputRadio2" type="radio" value="2">Paletas <br>
             <input name="inputRadio3" id="inputRadio3" type="radio" value="3">Pastel <br>
