--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Unidad 2/Programa12 (Voltar)/AngularJS/public_html/index.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Unidad 2/Programa12 (Voltar)/AngularJS/public_html/index.html
@@ -16,7 +16,7 @@ Fecha: 13/mar/2019
 </head>
 <body>
  <!--ejecuta para inicializar la aplicacion-->
-<div ng-init="name='Karen Lozano'">
+<div ng-init="name='Jesus Lira'">
     <!--con {{name}} se imprime el contenido-->
     <h1>Welcome {{name}}</h1>
     <!--con este podremos modificar la variable de name-->
