--- a/TopicosAvanzados19A/public_html/Oscar_Uh/program06.html
+++ b/TopicosAvanzados19A/public_html/Oscar_Uh/program06.html
@@ -21,24 +21,24 @@ https://www.tutorialrepublic.com/codelab.php?topic=bootstrap&file=crud-data-tabl
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <style type="text/css">
     body {
-        color: #000000;    <!--color de la captura de datoss-->
-		background: #FFFFFF;    <!--del fondo de la pagina-->
+        color: #000000;    
+		background: #FFFFFF;    
 		font-family: 'Varela Round', sans-serif;
-		font-size: 13px;    <!--tama?o de las letras de la cabeza-->
+		font-size: 13px;    
 	}
 	.table-wrapper {
         background: #fff;
-        padding: 20px 25px; <!--Tama?o del titulo la tabla-->
+        padding: 20px 25px; 
         margin: 30px 0;
 		border-radius: 3px;
         box-shadow: 0 1px 1px rgba(0,0,0,.05);
     }
-	.table-title {       <!--tama?o del cuadro princiapal-->
+	.table-title {    
 		padding-bottom: 15px;
 		background: #00D3BC;
-		color: #fff;  <!--color del titulo del cuadro-->
+		color: #fff;  
 		padding: 160px 30px;
-		margin: -20px -25px 10px;  <!--ancho del cuadro-->
+		margin: -20px -25px 10px;  
 		border-radius: 3px 3px 0 0;
     }
     .table-title h2 {
@@ -48,7 +48,7 @@ https://www.tutorialrepublic.com/codelab.php?topic=bootstrap&file=crud-data-tabl
 	.table-title .btn-group {
 		float: right;
 	}
-	.table-title .btn {   <!--tamaño del cuadro de agregar y eliminar-->
+	.table-title .btn {   
 		color: #fff;
 		float: right;
 		font-size: 13px;
@@ -59,7 +59,7 @@ https://www.tutorialrepublic.com/codelab.php?topic=bootstrap&file=crud-data-tabl
 		outline: none !important;
 		margin-left: 10px;
 	}
-	.table-title .btn i {      <!--tama?o del + --->
+	.table-title .btn i { 
 		float: left;
 		font-size: 21px;
 		margin-right: 5px;
@@ -68,7 +68,7 @@ https://www.tutorialrepublic.com/codelab.php?topic=bootstrap&file=crud-data-tabl
 		float: left;
 		margin-top: 2px;
 	}
-    table.table tr th, table.table tr td {    <!--espacio entre los productos-->
+    table.table tr th, table.table tr td { 
         border-color: #e9e9e9;
 		padding: 12px 15px;
 		vertical-align: middle;
